# platform

./: .dockerignore  .eslintrc.json  .gitignore  .prettierignore  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  Makefile  README.md  components.json  docker-compose.yml  globals.d.ts  package.json  pyproject.toml  tailwind.config.js  traefik.yml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  collect_env.py  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: builds.yml  push.yml  style.yml  tests.yml
components/: ChatwootWidget.tsx  Dashboard.tsx  Footer.tsx  LeftPanel.tsx  Navbar.tsx  ReorderableList.tsx  utils.tsx
components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  button.tsx  calendar.tsx  card.tsx  checkbox.tsx  command.tsx  context-menu.tsx  date-picker-with-range.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  icons.tsx  input.tsx  menubar.tsx  navigation-menu.tsx  progress.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  slider.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  toast.tsx  toaster.tsx  toggle.tsx  tooltip.tsx  use-toast.ts
pages/: _app.tsx  _document.tsx  index.tsx
src/: app.py
styles/: Footer.module.css  LeftPanel.module.css  Navbar.module.css  globals.css
