[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "contribution-dashboard"
version = "0.1.0.dev0"
description = "Management dashboard for guideline edition"
license = "Apache-2.0"
authors = ["François-Guillaume Fernandez <support@quack-ai.com>"]
maintainers = ["François-Guillaume Fernandez <support@quack-ai.com>"]
readme = "README.md"
repository = "https://github.com/quack-ai/contribution-platform"
keywords = ["frontend", "streamlit", "code contribution", "guidelines"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.25.0"
requests = "^2.31.0"

[tool.poetry.group.quality.dependencies]
ruff = { version = "==0.0.278", optional = true }
mypy = { version = "==1.4.1", optional = true }
types-requests = { version = ">=2.0.0", optional = true }
pandas-stubs = {version = "^1.2.0", optional = true}
black = { version = "==23.3.0", optional = true }
bandit = { version = "^1.7.0", extras = ["toml"], optional = true }
pre-commit = { version = "^2.17.0", optional = true }

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    # "D101", "D103",  # pydocstyle missing docstring in public function/class
    "D201","D202","D207","D208","D214","D215","D300","D301","D417", "D419",  # pydocstyle
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "CPY001",  # flake8-copyright
    "ISC",  # flake8-implicit-str-concat
    "PYI",  # flake8-pyi
    "NPY",  # numpy
    "PERF",  # perflint
    "RUF",  # ruff specific
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from
    "C901",  # too complex
    "F403",  # star imports
    "E731",  # lambda assignment
    "C416",  # list comprehension to list()
]
exclude = [".git", "engine"]
line-length = 120
target-version = "py39"

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["I001", "F401", "CPY001"]
"scripts/**.py" = ["D"]
".github/**.py" = ["D"]


[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.isort]
known-first-party = []
known-third-party = []


[tool.mypy]
python_version = "3.9"
mypy_path = "src/"
files = "src/"
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
implicit_reexport = false
explicit_package_bases = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ['py39']

[tool.bandit]
exclude_dirs = []
skips = ["B101"]
